#42: move to Java 8 remove a LOT of warnings and update some dependencies